# trime

./: .gitignore  build.gradle.kts  gradle.properties
app/: build.gradle.kts
app/release/: output-metadata.json
app/src/main/assets/: checksums.json
app/src/main/java/com/osfans/trime/ime/core/: Trime.java
app/src/main/java/com/osfans/trime/ime/keyboard/: Keyboard.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/include/librime/rime/: key_table.h
app/src/main/jni/librime_jni/: rime_jni.cc
script/: cache-hash.sh
